Add logger functionality and enable eslint rules

--- a/angular.json
+++ b/angular.json
@@ -99,11 +99,23 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "182ca0fe-dabf-4bdc-add9-ba669eb999b5"
+    "analytics": "182ca0fe-dabf-4bdc-add9-ba669eb999b5",
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
