--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.1",
+    "@swimlane/ngx-datatable": "^20.1.0",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "ngx-logger": "^5.0.12",
     "rxjs": "~7.8.0",
